--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SMAAS</title>
-    <link rel="stylesheet" href="../style/style.css" />
+    <link rel="stylesheet" href="../public/style/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -17,7 +17,7 @@
   <body>
     <div class="decoracao"></div>
     <div class="imagemPrincipal">
-      <img src="../image/SMAAS-removebg.png" alt="Logo" />
+      <img src="../public/image/SMAAS-removebg.png" alt="Logo" />
     </div>
     <div class="login" autocomplete="off">
       <span class="titulo">Login</span>
@@ -51,16 +51,16 @@
         <small class="erro" id="textFom"></small>
       </form>
       <div class="bttEsquecerSenha">
-        <a href="../esq_senha.html" target="_blank">Esqueceu a senha?</a>
+        <a href="../views/esq_senha.html" target="_blank">Esqueceu a senha?</a>
       </div>
     </div>
     <div class="bem-vindo">
       <h1>Bem Vindo!</h1>
       <p>Caso ainda nao tenha uma conta, clique no botao abaixo e comece.</p>
-      <a href="../cadastro.html" target="_parent">Registra-se</a>
+      <a href="../views/cadastro.html" target="_parent">Registra-se</a>
     </div>
     <div class="decoracao2"></div>
-    <script src="../javaScript/login.js"></script>
-    <script src="../javaScript/script_eyes.js"></script>
+    <script src="../public/javaScript/login.js"></script>
+    <script src="../public/javaScript/script_eyes.js"></script>
   </body>
 </html>
