--- a/frontend/views/microarea.html
+++ b/frontend/views/microarea.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Microarea</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../public/style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
@@ -33,6 +33,6 @@
             </li>
         </ul>
     </nav>
-    <script src="../javaScript/menuLateral.js"></script>
+    <script src="../public/javaScript/menuLateral.js"></script>
 </body>
 </html>
