--- a/frontend/views/cadastro.html
+++ b/frontend/views/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cadastro</title>
-    <link rel="stylesheet" href="../style/style.css" />
+    <link rel="stylesheet" href="../public/style/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -17,7 +17,7 @@
   <body>
     <div class="decoracao"></div>
     <div class="imagemPrincipalCadastro">
-      <img src="../image/SMAAS-removebg.png" alt="Logo" />
+      <img src="../public/image/SMAAS-removebg.png" alt="Logo" />
     </div>
     <div class="cadastro" autocomplete="off">
       <span class="titulo">Cadastro de Conta</span>
@@ -88,7 +88,7 @@
         </div>
         <div class="btts">
           <input type="submit" value="Cadastrar-se" id="bttEnviar"/>
-          <a href="../login.html">Voltar</a>
+          <a href="../views/login.html">Voltar</a>
         </div>
       </form>
       <div class="erro">
@@ -99,7 +99,7 @@
       </div>
     </div>
     <div class="decoracao2"></div>
-    <script src="../javaScript/script_cadastro.js"></script>
-    <script src="../javaScript/script_eyes.js"></script>
+    <script src="../public/javaScript/script_cadastro.js"></script>
+    <script src="../public/javaScript/script_eyes.js"></script>
   </body>
 </html>
