--- a/frontend/views/esq_senha.html
+++ b/frontend/views/esq_senha.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alterar Senha</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../public/style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="decoracao"></div>
     <div class="imagemPrincipal">
-        <img src="../image/SMAAS-removebg.png" alt="Logo">
+        <img src="../public/image/SMAAS-removebg.png" alt="Logo">
     </div>
     <div class="esq_senha" autocomplete="off">
         <span class="titulo">Alterar Senha</span>
@@ -26,6 +26,6 @@
         </form>
     </div>
     <div class="decoracao2"></div>
-    <script src="../javaScript/script_esqSenha"></script>
+    <script src="../public/javaScript/script_esqSenha"></script>
 </body>
 </html>
