alteracoes no css

--- a/frontend/views/microarea.html
+++ b/frontend/views/microarea.html
@@ -47,11 +47,11 @@
             <h2>Cadastrar Microarea</h2>
             <label for="nomeMicroarea">Endereco</label>
             <div class="componentesM">
-                <i class="bi bi-people-fill"></i><input type="text" name="nomeMicroarea" id="nomeMicroarea" placeholder="Endereco" required>
+                <i class="fa-solid fa-location-dot"></i><input type="text" name="nomeMicroarea" id="nomeMicroarea" placeholder="Endereco" required>
             </div>
             <label for="quantPessoas">Quantidade de Pessoas, ex:10</label>
             <div class="componentesM">
-                <i class="bi bi-calendar-week-fill"></i><input type="text" name="quantPessoas" id="quantPessoas" placeholder="ex:10" required>
+                <i class="fa-solid fa-people-group"></i><input type="text" name="quantPessoas" id="quantPessoas" placeholder="ex:10" required>
             </div>
             <div class="btnsMicroarea">
                 <button id="criarMicroarea">Criar</button>
