--- a/frontend/public/style/style.css
+++ b/frontend/public/style/style.css
@@ -396,27 +396,26 @@ body{
 .Microarea{
     width: 100vw;
     height: 100vh;
-    background-image: linear-gradient(to top, var(--cor-texto), var(--cor-fundo2));
+    background-image: linear-gradient(to top, var(--cor-fundo),#fff, #fff);
     overflow: hidden;
 }
 .menuLateral{
-    width: 70px;
+    width: 80px;
     height: 100%;
     padding:30px 0 30px 1%;
     background-color: var(--cor-fundo);
-    box-shadow: 5px 0 0 var(--cor-fundo2);
+    box-shadow: 5px 0 0 var(--cor-sombra-texto);
     position:fixed;
     top:0;
     left:0;
     transition: .5s;
     z-index: 1;
 }
-.Microarea.expandir{
-    backdrop-filter: blur(10px);
-}
+
 .menuLateral.expandir{
     width: 300px;
 }
+
 .btn-expandir{
     width: 100%;
     padding-left:10px
@@ -432,28 +431,26 @@ body{
 .menuLateral .item-menu{
     margin-top: 10px;
     list-style:none;
-    
 }
 .item-menu a{
     display:flex;
-    margin-left:-29px;
+    margin-left:-40px;
     color:#ffffff;
-    font-size: 16px;
-    padding:10px 4%;
+    font-size: 16px;   
     text-decoration: none;
     overflow: hidden;
 }
 
 .item-menu a:hover{
     border-radius: 5px;
-    margin-right: 5px;
-    background:#fff;
+    background:var(--cor-texto);
     color:var(--cor-fundo);
     transition: .35s;
 }
 .item-menu .icone{
-    font-size: 24px;
+    font-size: 26px;
     margin:15px 0px;
+    padding-left:10px;
 }
 .item-menu .txt-link{
     margin-left: 77px;
@@ -466,12 +463,16 @@ body{
     margin-left: 40px;
     opacity: 1;
 }
+.titleMicroarea{
+    font-size:1.2em;
+    color:var(--cor-titulo);
+    text-shadow:2px 2px 3px var(--cor-sombra-texto);;
+}
 .microarea-container {
 
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-gap: 10px;
-    position: relative;
+    grid-template-columns: repeat(4,1fr);
+    grid-gap: 50px;
     margin:100px;
 }
 .overlay {
@@ -502,12 +503,12 @@ body{
     flex-direction: column;
     align-items: left;
     position:relative;
-    justify-content: space-between;
     width: 100%;
     height: 15em;
     padding: 15px;
     border-radius: 10px;
     background-color: var(--cor-fundo);
+    box-shadow: 2px 3px 1px var(--cor-sombra-texto);
     margin: 10px;
 }
 .area h2 a{
@@ -530,21 +531,24 @@ body{
 }
 .area .editarMicroarea{
     display: flex;
-    justify-content: flex-start; 
-    align-items:flex-start; 
-    position: absolute; 
-    bottom: 0; 
-    right: 0; 
+    position: absolute;
+    margin:6px 10px;
+    bottom:0;
+    right:0;
+    width: 30px;
     padding:5px;
 }
 .editar{
-    position: relative;
+    display:flex;
+    position: absolute;
     background-color: transparent;
     color:#ffffff;
     border-style:none;
     font-size: 1.2em;
-    top:1%;
-    left:45%;
+    margin:10px;
+    bottom:0;
+    right:0;
+    width: 30px;
     cursor:pointer;
 }
 .editar:hover{
@@ -552,13 +556,14 @@ body{
     transition: .3s;
 }
 .apagar{
-    position: relative;
+    position: absolute;
     background-color: transparent;
     color:#ffffff;
-    top:16%;
-    left:40%;
+    bottom:0;
+    right:0;
+    width: 30px;
     border-style:none;
-    margin-right: 50px;
+    margin:8px 50px;
     font-size: 1.2em;
     cursor:pointer;
 }
@@ -572,10 +577,11 @@ body{
     font-size: 1em;
 }
 .editaM input{
-    background-color: var(--cor-5);
+    background-color: var(--cor-titulo);
     color:#fff;
     font-size: 1em;
-    width: 50%;
+    width: 96%;
+    margin-bottom: 5.5px;
     padding-left:5px;
     border-style:none;
     border-radius:5px;
@@ -583,6 +589,8 @@ body{
 }
 
 .salvar{
+    display:flex;
+    position:relative;
     background-color: transparent;
     color:#ffffff;
     border-style:none;
@@ -609,9 +617,10 @@ body{
     position:fixed;
 }
 #novaMicroarea{
-    padding: 10px;
+    padding: 15px;
     border-style:none;
     border-radius:5px;
+    margin-top:15px;
     font-size: 1em;
     background-color: var(--cor-fundo);
     text-align: center;
@@ -627,7 +636,8 @@ body{
     display:none;
     text-align: center;
     grid-column: auto;
-    width: 30%;
+    width: 40%;
+    height:40%;
     border-radius: 10px;
     border:1px solid var(--cor-borda);
     padding:40px;
@@ -636,11 +646,14 @@ body{
 .modal h2{
     color:var(--cor-titulo);
     font-size:1.7em;
+    text-shadow:2px 2px 3px var(--cor-sombra-texto);
 }
 .modal label{
     display:flex;
     margin: 10px;
     text-align: left;
+    color:var(--cor-texto2);
+    text-shadow:2px 2px 3px var(--cor-sombra-texto);
     
 }
 .modal .componentesM{
@@ -669,16 +682,25 @@ body{
     color:var(--cor-borda);
 }
 .componentesM i{
+    color:var(--cor-icone);
     font-size:1.2em;
 }
 
+.btnsMicroarea{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    margin-top:30px;
+}
 #criarMicroarea{
     background-color: var(--cor-fundo);
     border-style: none;
     border-radius: 5px;
+    font-size:16px;
     width: 100px;
     color:#fff;
     padding: 5px;
+    margin-right:10px;
     cursor:pointer;
     transition: .3s;
 }
@@ -689,6 +711,7 @@ body{
     background-color: var(--cor-fundo);
     border-style: none;
     border-radius: 5px;
+    font-size:16px;
     width: 100px;
     color:#fff;
     padding: 5px;
