atualizacao do js cadastro

--- a/frontend/views/cadastro.html
+++ b/frontend/views/cadastro.html
@@ -86,6 +86,17 @@
             onclick="mostrarConfSenha()"
           ></i>
         </div>
+        <div class="componentesC">
+          <i class="fa-solid fa-phone"></i>
+          <input
+            class="estilo_input"
+            type="number"
+            name="numero"
+            id="numero"
+            placeholder="ex:88999999999"
+            required
+          />
+        </div>
         <div class="btts">
           <input type="submit" value="Cadastrar-se" id="bttEnviar"/>
           <a href="../views/login.html">Voltar</a>
@@ -96,6 +107,7 @@
         <small id="textEmail"></small>
         <small id="textSenha"></small>
         <small id="textSenhaConfirmar"></small>
+        <small id="textNumero"></small>
       </div>
     </div>
     <div class="decoracao2"></div>
