--- a/frontend/views/detalhesMicroarea.html
+++ b/frontend/views/detalhesMicroarea.html
@@ -2,19 +2,12 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalhes Microarea</title>
-    <link rel="stylesheet" href="../public/style/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <title>Detalhes da Microarea</title>
+    <link rel="stylesheet" href="../public/style/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
-<body>
+<body class="Microarea">
     <nav class="menuLateral">
         <div class="btn-expandir">
             <i class="fa-solid fa-bars" id="btnExpandir"></i>
@@ -27,7 +20,7 @@
                 </a>
             </li>
             <li class="item-menu">
-                <a href="#">
+                <a href="../views/microarea.html">
                     <span class="icone"><i class="fa-solid fa-location-dot"></i></span>
                     <span class="txt-link">Microarea</span>
                 </a>
@@ -42,34 +35,13 @@
     </nav>
     <main>
         <span class="titleMicroarea">
-            <h2>Bairro</h2>
+            <h2 id="bairroTitulo"></h2>
         </span>
-        
-        <div class="btnNovaMicroarea">
-            <button id="novaMicroarea">Nova Rua</button>
-        </div>
-        
-        <div id="overlay" class="overlay"></div>
-        <div id="modal" class="modal">
-            <h2>Cadastrar Rua</h2>
-            <label for="nomeMicroarea">Nome da Rua</label>
-            <div class="componentesM">
-                <i class="fa-solid fa-location-dot"></i><input type="text" name="nomeMicroarea" id="nomeMicroarea" placeholder="Endereco" required>
-            </div>
-            <div class="btnsMicroarea">
-                <button id="criarMicroarea">Criar</button>
-                <button id="fechar">Fechar</button>
-            </div>
-        </div>
         <div id="microarea-container" class="microarea-container">
             
         </div>
     </main>
-    <script src="../public/javaScript/detalhesMicroarea.js"></script>
+    <script src="../public/javaScript/script_detalhesMicroarea"></script>
     <script src="../public/javaScript/menuLateral.js"></script>
-
-
-
-    
 </body>
 </html>
