--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -59,6 +59,11 @@
       <p>Caso ainda nao tenha uma conta, clique no botao abaixo e comece.</p>
       <a href="../views/cadastro.html" target="_parent">Registra-se</a>
     </div>
+    <footer class="rodape">
+      <p>&copy;SMAAS. Todos os direitos reservados.</p>
+      <a href="">Contatos <i class="fa-regular fa-comments"></i></a>
+    </footer>
+
     <div class="decoracao2"></div>
     <script src="../public/javaScript/login.js"></script>
     <script src="../public/javaScript/script_eyes.js"></script>
