--- a/frontend/views/microarea.html
+++ b/frontend/views/microarea.html
@@ -15,7 +15,7 @@
         </div>
         <ul>
             <li class="item-menu">
-                <a href="#">
+                <a href="../views/conta.html">
                     <span class="icone"><i class="fa-solid fa-user"></i></span>
                     <span class="txt-link">Conta</span>
                 </a>
