adicao parcial dos dados basicos do agente cadastrados

--- a/frontend/views/conta.html
+++ b/frontend/views/conta.html
@@ -52,25 +52,31 @@
             <div class="componentes-basicos">
                 <div class="informacao">
                     <label for="">Nome:</label>
-                    <h3>Eros Franklin Soares Felix</h3>
+                    <h3><%= usuario.nome %></h3>
                 </div>
             </div>
             <div class="componentes-basicos">
                 <div class="informacao">
                     <label for="">Telefone:</label>
-                    <h3>(82)9 9940-7878</h3>
+                    <h3><%= usuario.telefone %></h3>
                 </div>
             </div>
             <div class="componentes-basicos">
                 <div class="informacao">
                     <label for="">Senha:</label>
-                    <h3>********</h3>
+                    <h3><%= usuario.senha %></h3>
                 </div>
             </div>
             <div class="componentes-basicos">
                 <div class="informacao">
                     <label for="">Email:</label>
-                    <h3>eros@gmail.com</h3>
+                    <h3><%= usuario.email %></h3>
+                </div>
+            </div>
+            <div class="componentes-basicos">
+                <div class="informacao">
+                    <label for="">Email:</label>
+                    <h3><%= usuario.formacao %></h3>
                 </div>
             </div>
         </div>
