--- a/frontend/views/cadastro.html
+++ b/frontend/views/cadastro.html
@@ -97,6 +97,39 @@
             required
           />
         </div>
+        <div class="componentesC">
+          <i class="fa-regular fa-calendar-check"></i>
+          <input
+            class="estilo_input"
+            type="date"
+            name="data_contratacao"
+            id="data_contratacao"
+            placeholder="2024-01-01"
+            required
+          />
+        </div>
+        <div class="componentesC">
+          <i class="fa-solid fa-id-card"></i>
+          <input
+            class="estilo_input"
+            type="number"
+            name="cpf"
+            id="cpf"
+            placeholder="11122233345"
+            required
+          />
+        </div>
+        <div class="componentesC">
+          <i class="fa-regular fa-id-card"></i>
+          <input
+            class="estilo_input"
+            type="number"
+            name="rg"
+            id="rg"
+            placeholder="1122334455"
+            required
+          />
+        </div>
         <div class="btts">
           <input type="submit" value="Cadastrar-se" id="bttEnviar"/>
           <a href="../views/login.html">Voltar</a>
@@ -108,6 +141,9 @@
         <small id="textSenha"></small>
         <small id="textSenhaConfirmar"></small>
         <small id="textNumero"></small>
+        <small id="textDataContratacao"></small>
+        <small id="textCPF"></small>
+        <small id="textRG"></small>
       </div>
     </div>
     <div class="decoracao2"></div>
