--- a/frontend/views/conta.html
+++ b/frontend/views/conta.html
@@ -79,6 +79,24 @@
                         <h3><%= usuario.formacao %></h3>
                     </div>
                 </div>
+                <div class="componentes-basicos">
+                    <div class="informacao">
+                        <label for="">CPF:</label>
+                        <h3><%= usuario.cpf %></h3>
+                    </div>
+                </div>
+                <div class="componentes-basicos">
+                    <div class="informacao">
+                        <label for="">RG:</label>
+                        <h3><%= usuario.rg %></h3>
+                    </div>
+                </div>
+                <div class="componentes-basicos">
+                    <div class="informacao">
+                        <label for="">Data de contratacao:</label>
+                        <h3><%= usuario.data_contratacao %></h3>
+                    </div>
+                </div>
             <% }); %>
         </div>
         <span class="titulo-dados-polo">
