alteracao no placeholder do cpf e rg

--- a/frontend/views/cadastro.html
+++ b/frontend/views/cadastro.html
@@ -115,7 +115,7 @@
             type="number"
             name="cpf"
             id="cpf"
-            placeholder="11122233345"
+            placeholder="CPF, ex:11122233345"
             required
           />
         </div>
@@ -126,7 +126,7 @@
             type="number"
             name="rg"
             id="rg"
-            placeholder="1122334455"
+            placeholder="RG, ex:1234567"
             required
           />
         </div>
