--- a/frontend/views/cadastro.html
+++ b/frontend/views/cadastro.html
@@ -144,6 +144,7 @@
         <small id="textDataContratacao"></small>
         <small id="textCPF"></small>
         <small id="textRG"></small>
+        <small id="textForm"></small>
       </div>
     </div>
     <div class="decoracao2"></div>
